manifests/kratos-migrate.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kratos-migrate
  name: kratos-migrate
spec:
  containers:
    - args:
        - -c
        - /etc/config/kratos/kratos.yml
        - migrate
        - sql
        - -e
        - --yes
      image: oryd/kratos:v0.6.0-alpha.2
      name: kratos-migrate
      resources: {}
      volumeMounts:
        - mountPath: /etc/config/kratos
          name: config
  restartPolicy: OnFailure
  volumes:
    - name: config
      configMap:
        name: kratos-cm
status: {}
