manifests/kratos-selfservice-ui-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kratos-selfservice-ui-node
  name: kratos-selfservice-ui-node
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kratos-selfservice-ui-node
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: kratos-selfservice-ui-node
      name: kratos-selfservice-ui-node
    spec:
      containers:
        - env:
            - name: BASE_URL
              value: /ui
            - name: KRATOS_ADMIN_URL
              value: http://kratos:4434/
            - name: KRATOS_BROWSER_URL
              value: http://localhost/kratos/
            - name: KRATOS_PUBLIC_URL
              value: http://kratos:4433/
            - name: PORT
              value: "4455"
            - name: SECURITY_MODE
          image: oryd/kratos-selfservice-ui-node:v0.6.0-alpha.2
          imagePullPolicy: IfNotPresent
          name: kratos-selfservice-ui-node
          ports:
            - containerPort: 4455
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kratos-selfservice-ui-node
  name: kratos-selfservice-ui-node
spec:
  type: ClusterIP
  ports:
    - port: 4455
      targetPort: 4455
  selector:
    io.kompose.service: kratos-selfservice-ui-node
status:
  loadBalancer: {}
