manifests/mailslurper.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mailslurper
  name: mailslurper
spec:
  type: ClusterIP
  ports:
    - name: "4436"
      port: 4436
      targetPort: 4436
    - name: "4437"
      port: 4437
      targetPort: 4437
  selector:
    io.kompose.service: mailslurper
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mailslurper
  name: mailslurper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mailslurper
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: mailslurper
    spec:
      containers:
        - image: oryd/mailslurper:latest-smtps
          name: mailslurper
          ports:
            - containerPort: 4436
            - containerPort: 4437
          resources: {}
      restartPolicy: Always
status: {}
